<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/app_title"
        style="@style/AppTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_url"
        style="@style/AppUrlText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/github_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/text_user"
        style="@style/StandardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/distance_between_controls_2x"
        android:layout_marginTop="50dp"
        android:text="@string/user_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_url"
        app:layout_constraintVertical_bias="0.047" />
    <View
        android:id="@+id/divider_above"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_user"
        android:layout_marginTop="@dimen/distance_between_controls_1x"/>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_above">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_agr"
                style="@style/StandardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_agr"
                android:layout_marginHorizontal="@dimen/distance_between_controls_2x"
                android:justificationMode="inter_word"
                app:layout_constraintTop_toBottomOf="@+id/text_user"/>

        </LinearLayout>
    </ScrollView>
    <View
        android:id="@+id/divider_below"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollview"
        android:layout_marginTop="@dimen/distance_between_controls_1x"/>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cont_button"
        android:layout_marginStart="@dimen/distance_between_controls_2x"
        android:layout_marginBottom="@dimen/distance_between_controls_2x">
        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/StandardText"
            android:textAlignment="viewStart"
            android:text="@string/not_agreement"
            android:layout_marginBottom="0dp"/>
        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/StandardText"
            android:textAlignment="viewStart"
            android:text="@string/agreement"
            android:layout_marginTop="0dp"/>
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cont_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/distance_between_controls_2x"
        style="@style/BigButton"
        android:text="@string/cont"/>



</androidx.constraintlayout.widget.ConstraintLayout>