<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/distance_from_layout_to_content"
    tools:context=".activities.ComposeActivity">

    <TextView
        android:id="@+id/compose_date"
        style="@style/ComposeLabelText"
        android:layout_height="wrap_content"
        android:labelFor="@id/compose_edit_date"
        android:text="@string/date_text"
        android:textAlignment="viewStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/compose_edit_date"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/compose_measurement"
        android:layout_height="wrap_content"
        android:text="@string/weight_measurement"
        android:labelFor="@id/compose_edit_measurement"
        style="@style/ComposeLabelText"
        app:layout_constraintBaseline_toBaselineOf="@+id/compose_edit_measurement"
        app:layout_constraintEnd_toEndOf="@+id/compose_date"
        app:layout_constraintStart_toStartOf="@+id/compose_date" />



    <EditText
        android:id="@+id/compose_edit_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_between_controls_1x"
        android:inputType="date"
        android:enabled="false"
        android:importantForAutofill="no"
        style="@style/InputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/compose_date"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/compose_edit_measurement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_between_controls_1x"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        style="@style/InputEditText"
        app:layout_constraintEnd_toEndOf="@+id/compose_edit_date"
        app:layout_constraintStart_toEndOf="@+id/compose_date"
        app:layout_constraintTop_toBottomOf="@+id/compose_edit_date" />


    <EditText
        android:id="@+id/compose_edittext_notes"
        style="@style/InputEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start|top"
        android:hint="@string/compose_content"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textAutoComplete|textAutoCorrect"
        app:layout_constraintBottom_toTopOf="@+id/compose_button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compose_edit_measurement" />

    <Button
        android:id="@+id/compose_button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/compose_add"
        style="@style/BigButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/compose_edittext_notes"
        app:layout_constraintStart_toStartOf="@+id/compose_edittext_notes"/>



</androidx.constraintlayout.widget.ConstraintLayout>